[package]
name = "sts3215"
version = "0.0.1"
edition = "2024"

[features]
default = ["std", "ui"]
std = ["dep:serialport", "dep:env_logger", "dep:embedded-io-adapters", "thiserror/std"]
ui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
env_logger = { version = "0.11.8", optional = true }
log = { version = "0.4.29", default-features = false }
serialport = { version = "4.8.1", optional = true }
thiserror = { version = "2.0.17", default-features = false }
embedded-io = "0.6"
embedded-io-adapters = { version = "0.6", optional = true, features = ["std"] }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
