[package]
name = "sts3215"
version = "0.0.2"
edition = "2024"
authors = ["Frank Lyaruu <flyaruu@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A no_std compatible library for controlling STS3215 serial servo motors with embedded-io support"
repository = "https://github.com/flyaruu/sts3215"
homepage = "https://github.com/flyaruu/sts3215"
documentation = "https://docs.rs/sts3215"
keywords = ["servo", "robotics", "embedded", "no-std", "sts3215"]
categories = ["embedded", "hardware-support", "no-std"]
readme = "README.md"
rust-version = "1.85"

[features]
default = ["std", "ui"]
std = ["dep:serialport", "dep:env_logger", "dep:embedded-io-adapters", "thiserror/std"]
ui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
env_logger = { version = "0.11.8", optional = true }
log = { version = "0.4.29", default-features = false }
serialport = { version = "4.8.1", optional = true }
thiserror = { version = "2.0.17", default-features = false }
embedded-io = "0.6"
embedded-io-adapters = { version = "0.6", optional = true, features = ["std"] }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
heapless = "0.9.1"
